chore: eslint/prettier

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <title>Sample Code Flow Standalone</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="assets/runtimeEnvironment.js"></script>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
